syntax = "proto3";

option csharp_namespace = "DbData.Protos";
package dbdata;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "msgDbDataCommon.proto";
import "msgDestination.proto";
import "msgAttraction.proto";

  message DestinationLanguageFilter {    
    google.protobuf.StringValue id= 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue description = 3;
    PagingType paging = 4;
    SortType sort = 5;
    
}

message DestinationLanguageResponse {
    int32 totalRecords = 1;
    repeated DestinationLanguageStruct data = 2;
}